jump repeat bug fixed, level borders set up

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
 
 .wrapper-sky{
 	z-index: -1;
-	background: url(img/p_bg.png) no-repeat top center;
+	background: url(img/blue-sky.jpg) no-repeat top center;
 	background-size: 100% 86%;
 }
 
